# nvidia-broadcast-linux

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  PATCHES.md  README.md  SECURITY.md  SPONSORS.md  build-packages.sh  install-headless.sh  install.sh  install_macos.sh  pyproject.toml  requirements.txt  setup_deps.sh  uninstall.sh
.github/: SPONSORS_SETUP.md
.github/workflows/: build-packages.yml  snap.yml  sponsors.yml
configs/v4l2loopback/: nvbroadcast.conf
data/: com.doczeus.NVBroadcast.desktop  com.doczeus.NVBroadcast.metainfo.xml
docs/: GITHUB_SPONSORS_PROFILE.md  HEADLESS_SERVICES.md  MACOS_VIRTUAL_CAMERA.md  index.html
macos/Shared/: Constants.swift
packaging/debian/: control  postinst  prerm  rules
packaging/rpm/: nvbroadcast.spec
scripts/: install_maxine.sh  setup_v4l2loopback.sh
snap/: snapcraft.yaml
snap/gui/: generate_banner.py
src/nvbroadcast/: __init__.py  __main__.py  app.py  audio_service.py  headless_cli.py  headless_control.py  headless_tray.py  vcam_service.py
src/nvbroadcast/ai/: __init__.py  transcriber.py
src/nvbroadcast/audio/: devices.py  effects.py  level_monitor.py  mic_test.py  monitor.py  pipeline.py  service.py  virtual_mic.py  voice_fx.py
src/nvbroadcast/core/: config.py  constants.py  dependency_installer.py  gpu.py  platform.py  resources.py  updates.py
src/nvbroadcast/ui/: controls.py  device_selector.py  setup_wizard.py  style.css  tray.py  video_preview.py  window.py
src/nvbroadcast/video/: autoframe.py  beautify.py  effects.py  eye_contact.py  face_landmarks.py  pipeline.py  relighting.py  virtual_camera.py
tests/: test_app_audio_policy.py  test_arch_support.py  test_audio_effects.py  test_audio_pipeline.py  test_audio_service.py  test_auto_capture_tuning.py  test_background_overlay.py  test_beautify.py  test_camera_modes.py  test_config_persistence.py  test_dependency_installer.py  test_face_landmarks.py  test_headless_cli.py  test_integration.py  test_packaging_metadata.py  test_relighting.py  test_tensorrt_rvm.py  test_transcriber.py  test_updates.py  test_vcam_service.py  test_video_pipeline.py
