[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvbroadcast"
version = "1.1.9"
description = "NV Broadcast - Unofficial NVIDIA Broadcast for Linux and other OS by doczeus - AI-powered virtual camera, background removal, and noise cancellation"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [
    {name = "doczeus", email = "harshit@kshoonya.com"},
]
maintainers = [
    {name = "doczeus", email = "harshit@kshoonya.com"},
]
keywords = ["nvidia", "broadcast", "virtual-camera", "background-removal", "noise-cancellation", "linux", "doczeus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "numpy>=1.26",
    "Pillow>=10.0",
    "opencv-python-headless>=4.8",
    "mediapipe>=0.10",
    "onnxruntime>=1.24.4",
    "pyrnnoise>=0.4",
    "onnx>=1.14",
    "psutil>=5.9",
    "scipy>=1.11",
    "pyvirtualcam>=0.4; sys_platform == 'darwin'",
]

[project.urls]
Homepage = "https://github.com/Hkshoonya/nvidia-broadcast-linux"
Repository = "https://github.com/Hkshoonya/nvidia-broadcast-linux"
Issues = "https://github.com/Hkshoonya/nvidia-broadcast-linux/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
cuda = [
    "pycuda>=2024.1",
    "cupy-cuda12x",
    "nvidia-cublas-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-curand-cu12",
    "nvidia-cufft-cu12",
    "nvidia-cusparse-cu12",
    "nvidia-cusolver-cu12",
    "nvidia-nvjitlink-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "onnxruntime-gpu>=1.16",
]
meeting = [
    "faster-whisper",
    "ctranslate2",
    "huggingface-hub",
    "httpx",
    "tokenizers",
    "soundfile",
    'openai-whisper>=20231117; python_version < "3.14"',
]
maxine = ["nvidia-vfx"]
tensorrt = ["tensorrt", "tensorrt-cu12", "onnx"]

[project.scripts]
nvbroadcast = "nvbroadcast.__main__:main"
nvbroadcast-vcam = "nvbroadcast.vcam_service:main"
nvbroadcast-audio-headless = "nvbroadcast.audio_service:main"
nvbroadcast-headless = "nvbroadcast.headless_cli:main"
nvbroadcast-headless-control = "nvbroadcast.headless_control:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nvbroadcast.ui" = ["style.css"]

[tool.setuptools.data-files]
"share/applications" = ["data/com.doczeus.NVBroadcast.desktop"]
"share/metainfo" = ["data/com.doczeus.NVBroadcast.metainfo.xml"]
"share/icons/hicolor/scalable/apps" = ["data/icons/com.doczeus.NVBroadcast.svg"]
"share/nvbroadcast/backgrounds" = [
    "data/backgrounds/gradient_bg.png",
    "data/backgrounds/studio_bg.png",
    "data/backgrounds/test_bg.png",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".venv", "build", "dist"]
